chapter-3/exercise-2.1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      containers:
        - name: log
          image: ismayilkarimli/devops-with-kubernetes:2.1-log
          imagePullPolicy: Always
        - name: ping
          image: ismayilkarimli/devops-with-kubernetes:2.1-ping
          imagePullPolicy: Always
