chapter-3/exercise-2.1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - name: log-app
      port: 2345
      protocol: TCP
      targetPort: 8080
    - name: ping-app
      port: 2346
      protocol: TCP
      targetPort: 8081
