chapter-3/exercise-2.1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-pong-ingress
spec:
  rules:
    - http:
        paths:
        - path: /log
          pathType: Prefix
          backend:
            service:
              name: ping-pong-app-svc
              port:
                number: 2345
        - path: /pingpong
          pathType: Exact
          backend:
            service:
              name: ping-pong-app-svc
              port:
                number: 2346
